# ai_doc_comparison_legal

./: .gitignore  README.md  Simmons Wavelength Data Science LLM technical task (002) (002)(101052237.1).docx  compare.py  config.py  evaluation.py  llm_main.py  llm_simple.py  pipeline.py  pipeline1.py  pyproject.toml  simple_llm.py  test.ipynb  test.txt  text.txt
data/: v1.docx  v2.docx  ~$v1.docx
data/output/: compare_output_pipeline1.txt  compare_output_pipeline2.txt  evaluation_results.json  final_output_main_llm.txt  final_output_simple_llm.txt  standardized_sections.json  v1_sections.json  v2_sections.json
data/output/mapping/: standardize_sections.json
data/temp/: v1.txt  v2.txt
notebooks/: analyse.ipynb  current version.ipynb  simple_version.ipynb  standardize.ipynb  test copy.ipynb
src/: base.py  compare.py  embed.py  file_io.py  io.py  llm_section_extract.py  process.py  standardize.py  text_process.py
templates/: compare.j2  evaluation.j2  extract_sections.j2  simple_llm_prompt.jinja2  standardize_sections copy.j2  standardize_sections.j2  system_prompt.jinja2
